common/common.scss
/* ... */
*/

.global-notice .alert.alert-global-notice {
  background-color: rgba(33, 37, 41, 1);
  border-radius: 0.3em;
  padding: .8em 1.5em;
}
.alert-global-notice span div {
  display: flex;
  color: white;
  font-size: 14px;
  column-gap: 10px;
  align-items: center;
  justify-content: space-between;

}

table.category-list {
  border-collapse: separate;

  tr:first-child {
    td:first-child {
      border-top-left-radius: 0.3em;
    }

    td:last-child {
      border-top-right-radius: 0.3em;
    }
  }

  tr:last-child {
    td:first-child {
      border-bottom-left-radius: 0.3em;
    }

    td:last-child {
      border-bottom-right-radius: 0.3em;
    }
  }
}

.category-logo.aspect-image {
  margin: 0.33em 2em 0 0;
  --max-height: 40px;
}
.category-list .parent-category .category-name {
  margin-top: 1rem;
}
.category-list tbody {
  .category,
  .topics,
  .latest {
    background-color: rgba(0, 0, 0, 0.05);
  }
  .topics .unread-new {
    display: none;
  }
}
.category-list tbody tr:hover {
  .category,
  .topics,
  .latest {
    background-color: rgba(0, 0, 0, 0.1);
  }
}
.category-list-item.category {
  background-color: #ffffff;
}
.category-logo.no-logo-present {
  min-width: 132px;
}
.bg-gradient {
  height: 400px;
  background-image: linear-gradient(180deg, #fff, color-mix(in srgb, var(--category-color, rgba(66, 86, 231)) 20%, transparent));
}
.bg-waves {
  height: 100px;
  margin-bottom: -7px;
  position: relative;
  width: 100%;
  background-color: color-mix(in srgb, var(--category-color, rgba(66, 86, 231)) 20%, transparent);
  vertical-align: middle;
}

// Fallback to blue, not white
:root {
  --category-color: var(--tertiary);
  --category-text-color: var(--secondary);
}


// Reset weird CSS coming from somewhere
.topic-list .posters a:first-child .avatar.latest:not(.single) {
  box-shadow: none;
  border: none;
  left: auto;
}

// Custom footer component
.custom-footer .first-box .blurb,
.custom-footer .footer-section-link-wrapper a,
.custom-footer .third-box .small-link {
  color: #ffffff !important;
}
.custom-footer {
  background-color: #1E2533 !important;
}

